; ModuleID = '/home/carl/AnghaBench/linux/arch/sh/boards/mach-migor/extr_lcd_qvga.c_migor_lcd_qvga_seq.c'
source_filename = "/home/carl/AnghaBench/linux/arch/sh/boards/mach-migor/extr_lcd_qvga.c_migor_lcd_qvga_seq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sh_mobile_lcdc_sys_bus_ops = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.sh_mobile_lcdc_sys_bus_ops*, i16*, i32)* @migor_lcd_qvga_seq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @migor_lcd_qvga_seq(i8* %0, %struct.sh_mobile_lcdc_sys_bus_ops* %1, i16* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.sh_mobile_lcdc_sys_bus_ops*, align 8
  %7 = alloca i16*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store %struct.sh_mobile_lcdc_sys_bus_ops* %1, %struct.sh_mobile_lcdc_sys_bus_ops** %6, align 8
  store i16* %2, i16** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  br label %10

10:                                               ; preds = %29, %4
  %11 = load i32, i32* %9, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %32

14:                                               ; preds = %10
  %15 = load i8*, i8** %5, align 8
  %16 = load %struct.sh_mobile_lcdc_sys_bus_ops*, %struct.sh_mobile_lcdc_sys_bus_ops** %6, align 8
  %17 = load i16*, i16** %7, align 8
  %18 = load i32, i32* %9, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i16, i16* %17, i64 %19
  %21 = load i16, i16* %20, align 2
  %22 = load i16*, i16** %7, align 8
  %23 = load i32, i32* %9, align 4
  %24 = add nsw i32 %23, 1
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i16, i16* %22, i64 %25
  %27 = load i16, i16* %26, align 2
  %28 = call i32 @write_reg16(i8* %15, %struct.sh_mobile_lcdc_sys_bus_ops* %16, i16 zeroext %21, i16 zeroext %27)
  br label %29

29:                                               ; preds = %14
  %30 = load i32, i32* %9, align 4
  %31 = add nsw i32 %30, 2
  store i32 %31, i32* %9, align 4
  br label %10

32:                                               ; preds = %10
  ret void
}

declare dso_local i32 @write_reg16(i8*, %struct.sh_mobile_lcdc_sys_bus_ops*, i16 zeroext, i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
